generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id            String   @id @default(cuid())
  email         String   @unique
  googleSubject String?  @unique
  name          String?
  imageUrl      String?
  aiRequests    AiRequest[]
  auditEvents   AuditEvent[]
  exportJobs    ExportJob[]
  invitationsSent Invitation[]
  memberships   DocumentMembership[]
  revisions     Revision[]
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
}

model Document {
  id          String               @id @default(cuid())
  title       String
  archivedAt  DateTime?
  aiRequests  AiRequest[]
  auditEvents AuditEvent[]
  exportJobs  ExportJob[]
  invitations Invitation[]
  memberships DocumentMembership[]
  revisions   Revision[]
  createdAt   DateTime             @default(now())
  updatedAt   DateTime             @updatedAt
}

model DocumentMembership {
  id         String       @id @default(cuid())
  userId     String
  documentId String
  role       DocumentRole
  createdAt  DateTime     @default(now())
  updatedAt  DateTime     @updatedAt
  user       User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  document   Document     @relation(fields: [documentId], references: [id], onDelete: Cascade)

  @@unique([documentId, userId])
  @@index([userId])
}

model Invitation {
  id            String           @id @default(cuid())
  documentId    String
  invitedByUserId String
  inviteeEmail  String
  role          DocumentRole
  tokenHash     String
  expiresAt     DateTime
  acceptedAt    DateTime?
  revokedAt     DateTime?
  createdAt     DateTime         @default(now())
  updatedAt     DateTime         @updatedAt
  document      Document         @relation(fields: [documentId], references: [id], onDelete: Cascade)
  invitedByUser User             @relation(fields: [invitedByUserId], references: [id], onDelete: Cascade)

  @@index([documentId, createdAt])
  @@index([inviteeEmail])
  @@index([tokenHash])
}

model Revision {
  id               String    @id @default(cuid())
  documentId       String
  createdByUserId  String?
  label            String
  snapshotRef      String
  snapshotMimeType String?
  sourceRevisionId String?
  createdAt        DateTime  @default(now())
  updatedAt        DateTime  @updatedAt
  document         Document  @relation(fields: [documentId], references: [id], onDelete: Cascade)
  createdByUser    User?     @relation(fields: [createdByUserId], references: [id], onDelete: SetNull)
  sourceRevision   Revision? @relation("RevisionLineage", fields: [sourceRevisionId], references: [id], onDelete: SetNull)
  derivedRevisions Revision[] @relation("RevisionLineage")

  @@index([documentId, createdAt])
  @@index([createdByUserId])
  @@index([sourceRevisionId])
}

model AiRequest {
  id               String          @id @default(cuid())
  documentId       String
  requestedByUserId String
  action           AiAction
  status           AiRequestStatus @default(queued)
  scope            AiSelectionScope
  prompt           String?
  selectedText     String?
  surroundingText  String?
  maskPersonalData Boolean         @default(false)
  errorMessage     String?
  startedAt        DateTime?
  completedAt      DateTime?
  createdAt        DateTime        @default(now())
  updatedAt        DateTime        @updatedAt
  document         Document        @relation(fields: [documentId], references: [id], onDelete: Cascade)
  requestedByUser  User            @relation(fields: [requestedByUserId], references: [id], onDelete: Cascade)

  @@index([documentId, createdAt])
  @@index([requestedByUserId])
  @@index([status])
}

model ExportJob {
  id               String          @id @default(cuid())
  documentId       String
  requestedByUserId String
  format           ExportFormat
  status           ExportJobStatus @default(queued)
  storageKey       String?
  downloadUrl      String?
  errorMessage     String?
  completedAt      DateTime?
  createdAt        DateTime        @default(now())
  updatedAt        DateTime        @updatedAt
  document         Document        @relation(fields: [documentId], references: [id], onDelete: Cascade)
  requestedByUser  User            @relation(fields: [requestedByUserId], references: [id], onDelete: Cascade)

  @@index([documentId, createdAt])
  @@index([requestedByUserId])
  @@index([status])
}

model AuditEvent {
  id               String           @id @default(cuid())
  documentId       String?
  actorUserId      String?
  eventType        AuditEventType
  targetType       AuditTargetType
  targetId         String?
  metadata         Json?
  createdAt        DateTime         @default(now())
  actorUser        User?            @relation(fields: [actorUserId], references: [id], onDelete: SetNull)
  document         Document?        @relation(fields: [documentId], references: [id], onDelete: SetNull)

  @@index([documentId, createdAt])
  @@index([actorUserId, createdAt])
  @@index([eventType, createdAt])
}

enum DocumentRole {
  owner
  editor
  commenter
  viewer
}

enum AiAction {
  rewrite
  summarize
  translate
  restructure
}

enum AiRequestStatus {
  queued
  running
  succeeded
  failed
  cancelled
  stale
}

enum AiSelectionScope {
  document
  selection
}

enum ExportFormat {
  txt
  pdf
  docx
}

enum ExportJobStatus {
  queued
  running
  succeeded
  failed
}

enum AuditEventType {
  document_created
  document_renamed
  document_archived
  access_granted
  access_updated
  access_revoked
  ai_requested
  ai_applied
  export_requested
  export_completed
}

enum AuditTargetType {
  document
  membership
  ai_request
  export_job
  revision
}
